--- a/enterprise/index.html
+++ b/enterprise/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Business Infinity — The boardroom that never adjourns</title>
-  <meta name="description" content="From episodic decisions to shared orchestration. Cross the threshold with a persistent AI boardroom that earns trust in production." />
+  <meta name="description"
+    content="From episodic decisions to shared orchestration. Cross the threshold with a persistent AI boardroom that earns trust in production." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Using system fonts for performance and reliability -->
-  <link rel="stylesheet" href="/assets/css/pages/enterprise.css" />
+
 </head>
+
 <body>
   <!-- Scroll progress -->
   <div id="progress" aria-hidden="true"></div>
@@ -101,15 +104,18 @@
       <div class="wrap">
         <h2 class="h2 reveal" data-reveal="up">The network shift</h2>
         <p class="lead reveal" data-reveal="fade">
-          When your suppliers, plants, channels, and partners run Infinity: capacity reroutes to where it creates the most value now,
-          capital flows with the same intelligence, and everyone sees the same “now” — acting without waiting for you to convene.
+          When your suppliers, plants, channels, and partners run Infinity: capacity reroutes to where it creates the
+          most value now,
+          capital flows with the same intelligence, and everyone sees the same “now” — acting without waiting for you to
+          convene.
         </p>
         <div class="pills reveal" data-reveal="up" data-delay="100">
           <span class="pill">Zero‑latency negotiation</span>
           <span class="pill">Shared scenario sims</span>
           <span class="pill">Crisis re‑routing</span>
         </div>
-        <p class="subtle reveal" data-reveal="fade" data-delay="150">This isn’t alignment. It’s self‑alignment at network scale.</p>
+        <p class="subtle reveal" data-reveal="fade" data-delay="150">This isn’t alignment. It’s self‑alignment at
+          network scale.</p>
       </div>
     </section>
 
@@ -138,7 +144,8 @@
     <section class="section section-risk" id="risk">
       <div class="wrap">
         <h2 class="h2 reveal" data-reveal="up">Risk is a design variable</h2>
-        <p class="reveal" data-reveal="fade">Before Infinity ever writes back to your systems, it proves itself under:</p>
+        <p class="reveal" data-reveal="fade">Before Infinity ever writes back to your systems, it proves itself under:
+        </p>
         <div class="grid grid-2">
           <ul class="list card reveal" data-reveal="up">
             <li><span class="li-lead">Read‑only:</span> Simulations and diffs on live data.</li>
@@ -172,7 +179,8 @@
             <p>Capacity and lead‑time realism; fewer expedites; shared sims for what‑ifs.</p>
           </div>
         </div>
-        <p class="subtle reveal" data-reveal="fade" data-delay="150">4–8 weeks. Continuous deliberation, guarded actions, measured deltas in time, service, cost, and cash.</p>
+        <p class="subtle reveal" data-reveal="fade" data-delay="150">4–8 weeks. Continuous deliberation, guarded
+          actions, measured deltas in time, service, cost, and cash.</p>
         <div class="cta-center reveal" data-reveal="up" data-delay="200">
           <a href="mailto:enterprise@businessinfinity.ai" class="btn btn-primary btn-lg">Design your pilot</a>
         </div>
@@ -183,7 +191,8 @@
     <section class="section section-invite">
       <div class="wrap">
         <blockquote class="quote reveal" data-reveal="fade">
-          You’ve already felt the drag. The question is whether you keep paying it. The future is already running — the invitation is to join it.
+          You’ve already felt the drag. The question is whether you keep paying it. The future is already running — the
+          invitation is to join it.
         </blockquote>
         <div class="cta-center reveal" data-reveal="up" data-delay="120">
           <a href="#main-content" class="btn btn-quiet">Back to top</a>
@@ -208,7 +217,8 @@
 
   <script src="/assets/js/enterprise/scripts.js"></script>
   <noscript>
-    <link rel="stylesheet" href="/assets/css/pages/enterprise-noscript.css" />
+
   </noscript>
 </body>
+
 </html>
