--- a/features/index.html
+++ b/features/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Business Infinity — Features that compound your decisions</title>
-  <meta name="description" content="Perpetual AI boardroom with PhD-grade C-suite agents working in unison on your objectives — and a network of value chains that learns and acts together." />
-  <link rel="stylesheet" href="/assets/css/pages/features.css" />
+  <meta name="description"
+    content="Perpetual AI boardroom with PhD-grade C-suite agents working in unison on your objectives — and a network of value chains that learns and acts together." />
+
 </head>
+
 <body>
   <a href="#main" class="skip-link">Skip to content</a>
 
@@ -84,7 +87,8 @@
       <!-- Perpetual boardroom -->
       <section id="boardroom" class="section reveal">
         <h2>Perpetual boardroom</h2>
-        <p>Deliberation never stops. Agents keep a shared, long‑horizon memory; decisions are made when the moment is right, not when calendars align.</p>
+        <p>Deliberation never stops. Agents keep a shared, long‑horizon memory; decisions are made when the moment is
+          right, not when calendars align.</p>
         <div class="grid-3">
           <div class="card">
             <h3>Always‑on awareness</h3>
@@ -113,7 +117,8 @@
       <!-- PhD-grade agents -->
       <section id="agents" class="section reveal">
         <h2>PhD‑grade C‑suite agents</h2>
-        <p>Each agent embodies expert‑level, evidence‑based domain models — synthesizing frontier research, benchmark playbooks, and operator wisdom — calibrated to your context.</p>
+        <p>Each agent embodies expert‑level, evidence‑based domain models — synthesizing frontier research, benchmark
+          playbooks, and operator wisdom — calibrated to your context.</p>
 
         <div class="grid-3">
           <div class="card roster">
@@ -170,20 +175,24 @@
       <!-- Unison toward objectives -->
       <section id="unison" class="section reveal">
         <h2>Unison toward your objectives</h2>
-        <p>Agents align on shared OKRs and act as a coordinated quorum. Here’s how they combine on a typical objective set:</p>
+        <p>Agents align on shared OKRs and act as a coordinated quorum. Here’s how they combine on a typical objective
+          set:</p>
 
         <div class="combo grid-3">
           <div class="card">
             <h3>Lift NRR</h3>
-            <p><strong>CRO + CFO:</strong> Price experiments, discount guards, and dunning flows. <strong>COO:</strong> Service reliability lifts churn‑risk cohorts.</p>
+            <p><strong>CRO + CFO:</strong> Price experiments, discount guards, and dunning flows. <strong>COO:</strong>
+              Service reliability lifts churn‑risk cohorts.</p>
           </div>
           <div class="card">
             <h3>Free working capital</h3>
-            <p><strong>CFO + COO:</strong> Lead‑time compression and inventory policy tuning. <strong>CPO:</strong> Supplier terms optimization.</p>
+            <p><strong>CFO + COO:</strong> Lead‑time compression and inventory policy tuning. <strong>CPO:</strong>
+              Supplier terms optimization.</p>
           </div>
           <div class="card">
             <h3>Reduce cycle time</h3>
-            <p><strong>COO + CEO:</strong> Constraint removal prioritized by value at stake. <strong>CHRO:</strong> Skill‑to‑workload alignment.</p>
+            <p><strong>COO + CEO:</strong> Constraint removal prioritized by value at stake. <strong>CHRO:</strong>
+              Skill‑to‑workload alignment.</p>
           </div>
         </div>
       </section>
@@ -243,7 +252,8 @@
             <li><strong>Crisis routing:</strong> The network self‑heals around disruptions.</li>
           </ul>
         </div>
-        <p class="muted small">Illustrative math; real opportunity grows faster with multi‑party orchestration and overlapping chains.</p>
+        <p class="muted small">Illustrative math; real opportunity grows faster with multi‑party orchestration and
+          overlapping chains.</p>
       </section>
 
       <!-- Integrations -->
@@ -252,7 +262,8 @@
         <div class="grid-3">
           <div class="card">
             <h3>Read</h3>
-            <p>APIs/SQL, CDC, and events from ERP/MES/CRM/data platform. Semantic layer aligns language across domains.</p>
+            <p>APIs/SQL, CDC, and events from ERP/MES/CRM/data platform. Semantic layer aligns language across domains.
+            </p>
           </div>
           <div class="card">
             <h3>Write</h3>
@@ -319,7 +330,8 @@
 
   <script src="/assets/js/features/scripts.js"></script>
   <noscript>
-    <link rel="stylesheet" href="/assets/css/pages/features-noscript.css" />
+
   </noscript>
 </body>
+
 </html>
