--- a/about/index.html
+++ b/about/index.html
@@ -1,150 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: app
+title: "Boardroom | Business Infinity"
+description: "Persistent AI boardroom for compounding decision power across ERP, MES, CRM, and SaaS."
+---
+{% include about/header.html %}
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Business Infinity — Persistent AI Boardroom</title>
-  <meta name="description"
-    content="Business Infinity is a persistent AI boardroom where domain‑tuned C‑suite agents deliberate, decide, and act across ERP, MES, CRM, and SaaS." />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
-</head>
+<main class="wrap">
+  {% include about/problem.html %}
 
-<body data-theme="dark">
-  <header>
-    <div class="wrap mast">
-      <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
-        <div>
-          <h1>Business Infinity</h1>
-          <div class="tagline">Persistent AI boardroom for compounding decision power across ERP, MES, CRM, and SaaS
-          </div>
-        </div>
-      </div>
-      <div class="actions">
-        <button id="themeBtn" title="Toggle theme">Toggle theme</button>
-        <button onclick="window.print()">Print / PDF</button>
-        <a class="btn btn-primary" href="#contact">Talk to us</a>
-      </div>
-    </div>
-  </header>
+  {% include about/solution.html %}
 
-  <main class="wrap">
-    <section id="problem">
-      <h3>The Problem</h3>
-      <div class="card">
-        <p>Strategy is too often episodic and siloed — C‑suites deliberate in bursts, decisions live in decks, and
-          learning is local instead of compounding across time and teams.</p>
-      </div>
-    </section>
+  {% include about/components.html %}
 
-    <section id="solution">
-      <h3>The Solution</h3>
-      <div class="card">
-        <p><strong>Business Infinity</strong> creates a persistent AI boardroom: domain‑tuned C‑suite agents
-          deliberating in context, acting directly across ERP, MES, CRM, and SaaS, and learning continuously. Each cycle
-          enriches the agents’ domain models, compounding decision‑making capability for the next.</p>
-      </div>
-    </section>
+  {% include about/canvas.html %}
 
-    <section id="components">
-      <h3>Core Components</h3>
-      <div class="card">
-        <ul>
-          <li>Domain‑tuned C‑suite AI agents</li>
-          <li>Persistent deliberation memory and decision ledger</li>
-          <li>Live data integration with enterprise systems</li>
-          <li>Governance‑by‑protocol for transparent decision‑flow</li>
-        </ul>
-      </div>
-    </section>
+  {% include about/architecture.html %}
 
-    <section id="canvas">
-      <h3>Boardroom Canvas</h3>
-      <div class="card">
-        <p>Our operational blueprint: clarify charter → surface intelligence → deliberate in agentic quorum → decide via
-          governance protocol → act directly in connected systems → learn → repeat, compounding insight and capability.
-        </p>
-      </div>
-    </section>
+  {% include about/deployment.html %}
 
-    <section id="architecture">
-      <h3>Architecture</h3>
-      <div class="card">
-        <p>Modular agent clusters for each C‑suite role; API mesh linking into ERP/MES/CRM; secure audit logging;
-          feedback loops to retrain domain models based on decision outcomes.</p>
-      </div>
-    </section>
+  {% include about/gtm.html %}
 
-    <section id="deployment">
-      <h3>Deployment at ASI Saga</h3>
-      <div class="card">
-        <p>Our proving ground: live deployment inside ASI Saga as both first customer and perpetual testbed. Every
-          decision here feeds into the refinement of boardroom protocols and agent behaviours.</p>
-      </div>
-    </section>
+  {% include about/security.html %}
 
-    <section id="gtm">
-      <h3>Go‑To‑Market</h3>
-      <div class="card">
-        <p>We start with founder‑led enterprises hungry for strategic leverage. Each onboarded boardroom becomes a node
-          in the Business Infinity network, contributing insight to the commons.</p>
-      </div>
-    </section>
+  {% include about/network.html %}
 
-    <section id="security">
-      <h3>Security & Governance</h3>
-      <div class="card">
-        <p>Role‑based access, encrypted deliberation logs, protocol‑level decision capture, and compliance with
-          enterprise security requirements from day one.</p>
-      </div>
-    </section>
+  {% include about/roadmap.html %}
 
-    <section id="network">
-      <h3>Network Effects</h3>
-      <div class="card">
-        <p>Every decision improves not just one boardroom but the network — insights propagate, models upgrade, and the
-          collective capability compounds.</p>
-      </div>
-    </section>
-
-    <section id="roadmap">
-      <h3>Roadmap</h3>
-      <div class="card">
-        <ol>
-          <li>Complete ASI Saga showcase deployment</li>
-          <li>Onboard first external pilot customers</li>
-          <li>Establish shared decision commons</li>
-          <li>Scale to cross‑industry network of persistent AI boardrooms</li>
-        </ol>
-      </div>
-    </section>
-
-    <section id="faq">
-      <h3>FAQ</h3>
-      <div class="card">
-        <p><strong>Q:</strong> How is this different from a normal dashboard?<br><strong>A:</strong> Dashboards inform;
-          Business Infinity deliberates, decides, and acts — continuously and in context.</p>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h3>Contact</h3>
-      <div class="card">
-        <p>Ready to see a persistent AI boardroom in your context? Let’s co‑create charters, plug your stack, and put
-          decisions on rails.</p>
-      </div>
-    </section>
-  </main>
-
-  <footer class="wrap">
-    <div>© Business Infinity — a living network of agentic boardrooms. Built in partnership with ASI Saga.</div>
-  </footer>
-
-  <script src="/assets/js/about/app.js"></script>
-</body>
-
-</html>
+  {% include about/faq.html %}
+</main>
