--- a/features/index.html
+++ b/features/index.html
@@ -7,317 +7,26 @@ of value chains that learns and acts together."
 
 <a href="#main" class="skip-link">Skip to content</a>
 
-<!-- Header -->
-<header class="site-header">
-  <div class="wrap header-inner">
-    <div class="brand">
-      <div class="logo" aria-hidden="true"></div>
-      <div>
-        <h1 class="site-title">Business Infinity</h1>
-        <div class="site-sub">Perpetual agents boardroom. Networked orchestration.</div>
-      </div>
-    </div>
-    <div class="header-actions">
-      <button id="themeToggle" class="btn btn-quiet" aria-pressed="false">Dark mode</button>
-      <a class="btn btn-primary" href="#cta">Design your pilot</a>
-    </div>
-  </div>
-</header>
-
-<div class="wrap layout">
-  <!-- Sticky ToC -->
-  <nav id="toc" class="toc" aria-label="Table of contents">
-    <ol>
-      <li><a href="#you">Start with you</a></li>
-      <li><a href="#boardroom">Perpetual boardroom</a></li>
-      <li><a href="#agents">PhD‑grade agents</a></li>
-      <li><a href="#unison">Unison toward objectives</a></li>
-      <li><a href="#ledger">Decision ledger & governance</a></li>
-      <li><a href="#network">Networked value chains</a></li>
-      <li><a href="#integrations">Integrations</a></li>
-      <li><a href="#assurance">Assurance & safety</a></li>
-      <li><a href="#cta">Pilot</a></li>
-    </ol>
-  </nav>
-
-  <main id="main" class="content" tabindex="-1">
-    {% include features/header.html %}
-    <section id="you" class="section reveal">
-      {% include features/list.html %}
-      <div class="persona">
-        <div class="persona-tabs" role="tablist" aria-label="Choose your seat">
-          <button class="tab active" role="tab" aria-selected="true" data-persona="ceo">CEO</button>
-          <button class="tab" role="tab" aria-selected="false" data-persona="cfo">CFO</button>
-          <button class="tab" role="tab" aria-selected="false" data-persona="coo">COO</button>
-          <button class="tab" role="tab" aria-selected="false" data-persona="cro">CRO</button>
-          <button class="tab" role="tab" aria-selected="false" data-persona="cpo">CPO</button>
-          <button class="tab" role="tab" aria-selected="false" data-persona="chro">CHRO</button>
-        </div>
-
-        <div class="objectives">
-          <div class="chips" aria-label="Your objectives">
-            <button class="chip" data-obj="arr">Grow ARR</button>
-            <button class="chip" data-obj="nrr">Lift NRR</button>
-            <button class="chip" data-obj="cycle">Reduce cycle time</button>
-            <button class="chip" data-obj="adherence">Improve plan adherence</button>
-            <button class="chip" data-obj="wc">Free working capital</button>
-            <button class="chip" data-obj="cost">Lower cost‑to‑serve</button>
-            <button class="chip" data-obj="forecast">Increase forecast accuracy</button>
-            <button class="chip" data-obj="talent">Strengthen hiring quality</button>
-          </div>
-        </div>
-
-        <div class="panel card">
-          <h3 id="summaryTitle">For the CEO: what changes</h3>
-          <ul id="summaryList" class="list">
-            <!-- dynamic bullets filled by JS -->
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- Perpetual boardroom -->
-    <section id="boardroom" class="section reveal">
-      <h2>Perpetual boardroom</h2>
-      <p>Deliberation never stops. Agents keep a shared, long‑horizon memory; decisions are made when the moment is
-        right, not when calendars align.</p>
-      <div class="grid-3">
-        <div class="card">
-          <h3>Always‑on awareness</h3>
-          <p>Signals streamed from ERP/MES/CRM/SaaS; agents monitor KPIs, risks, and opportunities continuously.</p>
-        </div>
-        <div class="card">
-          <h3>Quorum deliberation</h3>
-          <p>Agents propose, challenge, and converge under chartered rules — not single‑shot replies.</p>
-        </div>
-        <div class="card">
-          <h3>Action with guardrails</h3>
-          <p>Dry‑runs, approvals, scope caps, and instant rollback. Every write is observable and reversible.</p>
-        </div>
-      </div>
-
-      <div class="loop card">
-        <div class="loop-step"><span>1</span> Observe</div>
-        <div class="loop-step"><span>2</span> Deliberate</div>
-        <div class="loop-step"><span>3</span> Decide</div>
-        <div class="loop-step"><span>4</span> Act</div>
-        <div class="loop-step"><span>5</span> Measure</div>
-        <div class="loop-step"><span>6</span> Learn & update</div>
-      </div>
-    </section>
-
-    <!-- PhD-grade agents -->
-    <section id="agents" class="section reveal">
-      <h2>PhD‑grade C‑suite agents</h2>
-      <p>Each agent embodies expert‑level, evidence‑based domain models — synthesizing frontier research, benchmark
-        playbooks, and operator wisdom — calibrated to your context.</p>
-
-      <div class="grid-3">
-        <div class="card roster">
-          <h3>CEO agent</h3>
-          <ul class="list">
-            <li><strong>Scope:</strong> Strategy, portfolio, capital allocation</li>
-            <li><strong>Strength:</strong> System‑level trade‑off analysis</li>
-            <li><strong>Gives you:</strong> Clarity under uncertainty</li>
-          </ul>
-        </div>
-        <div class="card roster">
-          <h3>CFO agent</h3>
-          <ul class="list">
-            <li><strong>Scope:</strong> Forecasts, margins, working capital</li>
-            <li><strong>Strength:</strong> Unit economics & policy checks</li>
-            <li><strong>Gives you:</strong> Capital efficiency, clean audit</li>
-          </ul>
-        </div>
-        <div class="card roster">
-          <h3>COO agent</h3>
-          <ul class="list">
-            <li><strong>Scope:</strong> Supply, schedules, constraints</li>
-            <li><strong>Strength:</strong> Scenario sims & replans</li>
-            <li><strong>Gives you:</strong> Throughput & resilience</li>
-          </ul>
-        </div>
-        <div class="card roster">
-          <h3>CRO agent</h3>
-          <ul class="list">
-            <li><strong>Scope:</strong> Pipeline, pricing, retention</li>
-            <li><strong>Strength:</strong> Experiment design & lift</li>
-            <li><strong>Gives you:</strong> ARR & NRR growth</li>
-          </ul>
-        </div>
-        <div class="card roster">
-          <h3>CPO agent</h3>
-          <ul class="list">
-            <li><strong>Scope:</strong> Sourcing, terms, supplier risk</li>
-            <li><strong>Strength:</strong> Negotiation frames, TCO</li>
-            <li><strong>Gives you:</strong> Cost, continuity, quality</li>
-          </ul>
-        </div>
-        <div class="card roster">
-          <h3>CHRO agent</h3>
-          <ul class="list">
-            <li><strong>Scope:</strong> Hiring, capability, load</li>
-            <li><strong>Strength:</strong> Org design & skill mapping</li>
-            <li><strong>Gives you:</strong> Velocity without burnout</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- Unison toward objectives -->
-    <section id="unison" class="section reveal">
-      <h2>Unison toward your objectives</h2>
-      <p>Agents align on shared OKRs and act as a coordinated quorum. Here’s how they combine on a typical objective
-        set:</p>
-
-      <div class="combo grid-3">
-        <div class="card">
-          <h3>Lift NRR</h3>
-          <p><strong>CRO + CFO:</strong> Price experiments, discount guards, and dunning flows. <strong>COO:</strong>
-            Service reliability lifts churn‑risk cohorts.</p>
-        </div>
-        <div class="card">
-          <h3>Free working capital</h3>
-          <p><strong>CFO + COO:</strong> Lead‑time compression and inventory policy tuning. <strong>CPO:</strong>
-            Supplier terms optimization.</p>
-        </div>
-        <div class="card">
-          <h3>Reduce cycle time</h3>
-          <p><strong>COO + CEO:</strong> Constraint removal prioritized by value at stake. <strong>CHRO:</strong>
-            Skill‑to‑workload alignment.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Decision ledger & governance -->
-    <section id="ledger" class="section reveal">
-      <h2>Decision ledger & governance</h2>
-      <div class="grid-2">
-        <div class="card">
-          <h3>What gets captured</h3>
-          <ul class="list">
-            <li><strong>Intent → Options → Choice</strong></li>
-            <li><strong>Rationale & counterfactuals</strong></li>
-            <li><strong>Approvals & SoD</strong></li>
-            <li><strong>Actions & outcomes</strong></li>
-            <li><strong>Lessons → Playbooks</strong></li>
-          </ul>
-        </div>
-        <div class="card">
-          <h3>Why it matters</h3>
-          <ul class="list">
-            <li><strong>Auditability:</strong> Tamper‑evident trace</li>
-            <li><strong>Assurance:</strong> Policy, privacy, finance gates</li>
-            <li><strong>Learning:</strong> Every win lifts the next cycle</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- Networked value chains -->
-    <section id="network" class="section reveal">
-      <h2>Networked value chains</h2>
-      <p>When each company in a chain runs Infinity, the network doesn’t just learn together — it acts together.</p>
-
-      <div class="network card">
-        <div class="net-controls">
-          <label for="nodesSlider">Companies running Infinity (your value chain + partners)</label>
-          <input type="range" min="3" max="500" value="25" id="nodesSlider" />
-        </div>
-        <div class="net-stats">
-          <div class="stat">
-            <div class="label">Nodes</div>
-            <div class="value" id="nodesCount">25</div>
-          </div>
-          <div class="stat">
-            <div class="label">Pair pathways C(n,2)</div>
-            <div class="value" id="pairPaths">300</div>
-          </div>
-          <div class="stat">
-            <div class="label">Triad plays C(n,3)</div>
-            <div class="value" id="triadPaths">2,300</div>
-          </div>
-        </div>
-        <ul class="list tight">
-          <li><strong>Zero‑latency negotiation:</strong> Terms aligned in minutes, not weeks.</li>
-          <li><strong>Shared sims:</strong> Multi‑node “what‑ifs” with synchronized replans.</li>
-          <li><strong>Crisis routing:</strong> The network self‑heals around disruptions.</li>
-        </ul>
-      </div>
-      <p class="muted small">Illustrative math; real opportunity grows faster with multi‑party orchestration and
-        overlapping chains.</p>
-    </section>
-
-    <!-- Integrations -->
-    <section id="integrations" class="section reveal">
-      <h2>Integrations</h2>
-      <div class="grid-3">
-        <div class="card">
-          <h3>Read</h3>
-          <p>APIs/SQL, CDC, and events from ERP/MES/CRM/data platform. Semantic layer aligns language across domains.
-          </p>
-        </div>
-        <div class="card">
-          <h3>Write</h3>
-          <p>Idempotent adapters with retries; guarded writes with caps, canary, and rollback.</p>
-        </div>
-        <div class="card">
-          <h3>Identity & policy</h3>
-          <p>SSO/SCIM, ABAC/RBAC, policy engines and residency controls built‑in.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Assurance & safety -->
-    <section id="assurance" class="section reveal">
-      <h2>Assurance & safety</h2>
-      <div class="grid-3">
-        <div class="card">
-          <h3>Charters & limits</h3>
-          <p>Explicit powers and escalation paths per agent. Risk budgets by domain.</p>
-        </div>
-        <div class="card">
-          <h3>Runtime evaluators</h3>
-          <p>Policy, finance, privacy checks on every decision and action.</p>
-        </div>
-        <div class="card">
-          <h3>Observability</h3>
-          <p>Decision traces, action telemetry, drift monitors, and alerts.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- CTA -->
-    <section id="cta" class="section cta reveal">
-      <div class="cta-box">
-        <h2>Cross the threshold with a zero‑regret pilot</h2>
-        <p>4–8 weeks. Read‑only first. Guarded writes where safe. Evidence that pays for itself.</p>
-        <a href="mailto:hello@businessinfinity.ai" class="btn btn-primary">Request a briefing</a>
-      </div>
-    </section>
-  </main>
+{% include features/header.html %}
 </div>
 
-<!-- Footer -->
-<footer class="site-footer">
-  <div class="wrap foot">
-    <div>
-      <strong>Business Infinity</strong>
-      <div class="muted">Networked intelligence. Shared orchestration.</div>
-    </div>
-    <nav aria-label="Footer">
-      <a href="#you">You</a>
-      <a href="#boardroom">Boardroom</a>
-      <a href="#network">Network</a>
-      <a href="#cta">Pilot</a>
-      <a href="/trust">Trust Center</a>
-      <a href="/privacy-policy">Privacy</a>
-      <a href="/enterprise">Enterprise</a>
-      <a href="/entrepreneur">Entrepreneurs</a>
-      <a href="/network">Network</a>
-    </nav>
-    <div class="muted">© 2025 Business Infinity</div>
-  </div>
+{% include features/header.html %}
+{% include features/toc.html %}
+<main id="main" class="content" tabindex="-1">
+  {% include features/you.html %}
+  {% include features/boardroom.html %}
+  {% include features/agents.html %}
+  {% include features/unison.html %}
+  {% include features/ledger.html %}
+  {% include features/network.html %}
+  {% include features/integrations.html %}
+  {% include features/assurance.html %}
+  {% include features/cta.html %}
+</main>
+</main>
+
+{% include features/footer.html %}
+</div>
 </footer>
 
 <script src="/assets/js/features/scripts.js"></script>
