Update links and constrast

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ Enhanced with proper semantic structure, accessibility, and layout containment
 
 {% include index/features.html %}
 
+{% include index/quick-links.html %}
+
 {% include index/use_cases.html %}
 
 {% include index/testimonials.html %}
