--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@ layout: default
 title: Sitemap - Business Infinity
 ---
 
-<div class="sitemap-container" style="max-width: 1200px; margin: 2rem auto; padding: 0 2rem;">
+<div class="sitemap-container">
   <h1>Sitemap</h1>
   <p class="lead">Navigate all pages and features of Business Infinity</p>
 
@@ -11,125 +11,65 @@ title: Sitemap - Business Infinity
     <h2>Main Pages</h2>
     <ul class="sitemap-list">
       <li><a href="/">Home</a> - Main landing page</li>
-      <li><a href="/features">Features</a> - Comprehensive feature overview</li>
-      <li><a href="/trust">Trust Center</a> - Security, compliance, and transparency</li>
-      <li><a href="/about">About</a> - About Business Infinity</li>
+      <li><a href="/features/">Features</a> - Comprehensive feature overview</li>
+      <li><a href="/features2/">Features (V2)</a> - Alternative feature presentation</li>
+      <li><a href="/trust/">Trust Center</a> - Security, compliance, and transparency</li>
+      <li><a href="/about/">About</a> - About Business Infinity</li>
     </ul>
   </section>
 
   <section class="sitemap-section">
     <h2>Application Pages</h2>
     <ul class="sitemap-list">
-      <li><a href="/boardroom">Boardroom</a> - AI boardroom interface</li>
-      <li><a href="/dashboard">Dashboard</a> - Management dashboard</li>
-      <li><a href="/mentor">Mentor Mode</a> - AI mentor guidance</li>
-      <li><a href="/onboarding">Onboarding</a> - Get started with Business Infinity</li>
-      <li><a href="/chat">Chat</a> - Chat interface</li>
-      <li><a href="/profile">Profile</a> - User profile management</li>
+      <li><a href="/boardroom/">Boardroom</a> - AI boardroom interface</li>
+      <li><a href="/boardroom2/">Boardroom (V2)</a> - Enhanced boardroom interface</li>
+      <li><a href="/dashboard/">Dashboard</a> - Management dashboard</li>
+      <li><a href="/mentor/">Mentor Mode</a> - AI mentor guidance</li>
+      <li><a href="/onboarding/">Onboarding</a> - Get started with Business Infinity</li>
+      <li><a href="/chat/">Chat</a> - Chat interface</li>
+      <li><a href="/conversations/">Conversations</a> - Conversation history</li>
+      <li><a href="/profile/">Profile</a> - User profile management</li>
+      <li><a href="/client/">Client Portal</a> - Client management interface</li>
     </ul>
   </section>
 
   <section class="sitemap-section">
     <h2>Solutions by Audience</h2>
     <ul class="sitemap-list">
-      <li><a href="/enterprise">Enterprise</a> - Enterprise solutions</li>
-      <li><a href="/entrepreneur">Entrepreneurs</a> - Solutions for entrepreneurs</li>
-      <li><a href="/startup">Startups</a> - Startup-focused features</li>
-      <li><a href="/network">Network</a> - Networked value chains</li>
+      <li><a href="/enterprise/">Enterprise</a> - Enterprise solutions</li>
+      <li><a href="/entrepreneur/">Entrepreneurs</a> - Solutions for entrepreneurs</li>
+      <li><a href="/startup/">Startups</a> - Startup-focused features</li>
+      <li><a href="/startup2/">Startups (Alt)</a> - Alternative startup presentation</li>
+      <li><a href="/network/">Network</a> - Networked value chains</li>
     </ul>
   </section>
 
   <section class="sitemap-section">
-    <h2>Resources & Tools</h2>
+    <h2>Business Tools</h2>
     <ul class="sitemap-list">
-      <li><a href="/framework">Framework</a> - Business Infinity framework</li>
-      <li><a href="/roadmap">Roadmap</a> - Product roadmap</li>
-      <li><a href="/pitch">Pitch</a> - Investor pitch</li>
-      <li><a href="/bmc">Business Model Canvas</a> - Business model overview</li>
+      <li><a href="/bmc/">Business Model Canvas</a> - Business model overview</li>
+      <li><a href="/decision-framework/">Decision Framework</a> - AI-powered decision making</li>
+      <li><a href="/pitch/">Pitch Deck</a> - Investor pitch presentation</li>
+      <li><a href="/pitch2/">Pitch (V2)</a> - Alternative pitch format</li>
+      <li><a href="/pitch3/">Pitch (V3)</a> - Extended pitch presentation</li>
+    </ul>
+  </section>
+
+  <section class="sitemap-section">
+    <h2>Resources & Documentation</h2>
+    <ul class="sitemap-list">
+      <li><a href="/docs/">Documentation</a> - Technical documentation</li>
+      <li><a href="/api/">API Reference</a> - API documentation</li>
+      <li><a href="/endpoint/">Endpoint Reference</a> - API endpoint details</li>
+      <li><a href="/roadmap/">Product Roadmap</a> - Future development plans</li>
     </ul>
   </section>
 
   <section class="sitemap-section">
     <h2>Legal & Compliance</h2>
     <ul class="sitemap-list">
-      <li><a href="/privacy-policy">Privacy Policy</a> - Privacy and data protection</li>
-      <li><a href="/trust">Trust & Compliance</a> - Security certifications and compliance</li>
-    </ul>
-  </section>
-
-  <section class="sitemap-section">
-    <h2>Documentation</h2>
-    <ul class="sitemap-list">
-      <li><a href="https://github.com/ASISaga/businessinfinity.asisaga.com/blob/main/docs/Trust.md" target="_blank">Trust Framework</a></li>
-      <li><a href="https://github.com/ASISaga/businessinfinity.asisaga.com/blob/main/docs/specifications.md" target="_blank">Technical Specifications</a></li>
-      <li><a href="https://github.com/ASISaga/businessinfinity.asisaga.com/blob/main/README.md" target="_blank">README</a></li>
+      <li><a href="/privacy-policy/">Privacy Policy</a> - Privacy and data protection</li>
+      <li><a href="/trust/">Trust & Compliance</a> - Security certifications and compliance</li>
     </ul>
   </section>
 </div>
-
-<style>
-.sitemap-container {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-}
-
-.sitemap-section {
-  margin: 2rem 0;
-  padding: 1.5rem;
-  background: #f8f9fa;
-  border-radius: 8px;
-}
-
-.sitemap-section h2 {
-  margin-top: 0;
-  color: #333;
-  border-bottom: 2px solid #0066cc;
-  padding-bottom: 0.5rem;
-}
-
-.sitemap-list {
-  list-style: none;
-  padding: 0;
-  margin: 1rem 0;
-}
-
-.sitemap-list li {
-  padding: 0.5rem 0;
-  border-bottom: 1px solid #e0e0e0;
-}
-
-.sitemap-list li:last-child {
-  border-bottom: none;
-}
-
-.sitemap-list a {
-  color: #0066cc;
-  text-decoration: none;
-  font-weight: 500;
-  transition: color 0.2s;
-}
-
-.sitemap-list a:hover {
-  color: #0052a3;
-  text-decoration: underline;
-}
-
-.lead {
-  font-size: 1.2rem;
-  color: #666;
-  margin-bottom: 2rem;
-}
-
-@media (prefers-color-scheme: dark) {
-  .sitemap-section {
-    background: #2a2a2a;
-  }
-  
-  .sitemap-section h2 {
-    color: #e0e0e0;
-  }
-  
-  .sitemap-list li {
-    border-bottom-color: #444;
-  }
-}
-</style>
