--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: "MCP Boardroom Dashboard"
+---
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MCP Boardroom Dashboard</title>
+<!-- Choose a role or omit to show all -->
+<boardroom-dashboard manifest-url="{{ '/api/boardroom/manifest.json' | relative_url }}"
+  role="CFO"></boardroom-dashboard>
 
-</head>
-
-<body>
-  <!-- Choose a role or omit to show all -->
-  <boardroom-dashboard manifest-url="/api/boardroom/manifest.json" role="CFO"></boardroom-dashboard>
-
-  <script type="module" src="/assets/js/dashboard/dashboard.js"></script>
-</body>
-
-</html>
+<script type="module" src="{{ '/assets/js/dashboard/dashboard.js' | relative_url }}"></script>
