--- a/trust/index.html
+++ b/trust/index.html
@@ -1,5 +1,5 @@
 ---
-layout: app
+layout: default
 title: "Trust Center | Business Infinity"
 description: "Our commitment to security, compliance, and transparency. Trust is earned through evidence, not claimed
 through words."
