--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 ---
-layout: app
+layout: default
 title: "Boardroom | Business Infinity"
 description: "Persistent AI boardroom for compounding decision power across ERP, MES, CRM, and SaaS."
 ---
