--- a/boardroom2/index.html
+++ b/boardroom2/index.html
@@ -1,8 +1,10 @@
 ---
-title: Boardroom Mode
-layout: default
+layout: app
+title: "Boardroom | Business Infinity"
+permalink: /boardroom2/
+redirect_to: /boardroom/
 ---
 
-<boardroom />
+<meta http-equiv="refresh" content="0; url={{ '/boardroom/' | relative_url }}" />
 
-<script type="module" src="{{ '/assets/js/boardroom/boardroom.js' | relative_url }}"></script>
+<p>If you are not redirected, <a href="{{ '/boardroom/' | relative_url }}">open the Boardroom experience</a>.</p>
