--- a/boardroom/index-new.html
+++ b/boardroom/index-new.html
@@ -1,111 +1,8 @@
 ---
-layout: app
-title: "Boardroom | Business Infinity"
+layout: none
+permalink: /boardroom/new/
 ---
-<!-- 
-Boardroom Layout - Built on Chatroom 
-Purpose: Business collaboration interface with agents
-Features: Agent profiles, multi-pane layout, screen share, video call
--->
-<boardroom-app title="Boardroom" show-avatar show-toolbar show-typing-indicator show-connection-status show-toggle-strip
-    show-members-sidebar show-agent-profiles enable-screen-share enable-video-call enable-file-attach enable-formatting
-    api-base="/api/boardroom" auto-refresh refresh-interval="3000">
-    <main class="boardroom-container">
-        <section class="boardroom-section" aria-label="Boardroom Interface">
-            <div class="boardroom-container-fluid">
-                <div class="boardroom-main-row">
-                    <!-- Toggle Strip -->
-                    {% include boardroom/toggle-strip.html %}
 
-                    <!-- Members Sidebar -->
-                    {% include boardroom/members-sidebar.html %}
+<meta http-equiv="refresh" content="0; url={{ '/boardroom/' | relative_url }}" />
 
-                    <!-- Chat Area (extends chatroom) -->
-                    <section id="chatArea" class="boardroom-chat-area" aria-label="Chat Area">
-                        {% include chatroom/header.html
-                        title="Boardroom"
-                        connection_status='<span class="boardroom-status-indicator boardroom-status-online"></span>
-                        Live'
-                        extra_actions='
-                        <button class="boardroom-action-btn" title="Screen Share" aria-label="Screen Share">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/display.svg"
-                                alt="Screen Share" width="18" height="18" />
-                        </button>
-                        <button class="boardroom-action-btn" title="Video Call" aria-label="Video Call">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/camera-video.svg"
-                                alt="Video Call" width="18" height="18" />
-                        </button>
-                        <button class="boardroom-action-btn" title="More Options" aria-label="More Options">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/three-dots.svg"
-                                alt="More Options" width="18" height="18" />
-                        </button>
-                        '
-                        %}
-
-                        <section class="chatroom-messages boardroom-chat-messages" id="chatMessages"
-                            aria-label="Chat Messages">
-                            {% include boardroom/chat-area/empty-state.html %}
-                        </section>
-
-                        {% include chatroom/input.html
-                        show_avatar=true
-                        avatar_url="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
-                        placeholder="Type your message..."
-                        rows=1
-                        maxlength=1000
-                        show_toolbar=true
-                        extra_input_actions='
-                        <button class="chatroom-input-action-btn" type="button" title="Attach File"
-                            aria-label="Attach File">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/paperclip.svg"
-                                alt="Attach" width="18" height="18" />
-                        </button>
-                        <button class="chatroom-input-action-btn" type="button" title="Insert Emoji"
-                            aria-label="Insert Emoji">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/emoji-smile.svg"
-                                alt="Emoji" width="18" height="18" />
-                        </button>
-                        <button class="chatroom-input-action-btn" type="button" title="Voice Message"
-                            aria-label="Voice Message">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/mic.svg" alt="Voice"
-                                width="18" height="18" />
-                        </button>
-                        '
-                        toolbar_left='
-                        <button class="chatroom-input-format-btn" type="button" title="Bold" aria-label="Bold">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/type-bold.svg"
-                                alt="Bold" width="14" height="14" />
-                        </button>
-                        <button class="chatroom-input-format-btn" type="button" title="Italic" aria-label="Italic">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/type-italic.svg"
-                                alt="Italic" width="14" height="14" />
-                        </button>
-                        <button class="chatroom-input-format-btn" type="button" title="Code" aria-label="Code">
-                            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/code.svg" alt="Code"
-                                width="14" height="14" />
-                        </button>
-                        '
-                        toolbar_right='
-                        <span class="chatroom-char-count" id="char-count">0/1000</span>
-                        '
-                        %}
-                    </section>
-                </div>
-            </div>
-        </section>
-
-        <!-- Loading overlay -->
-        <div class="boardroom-loading-overlay" id="boardroom-loading">
-            <div class="boardroom-loading-content">
-                <div class="boardroom-loading-spinner"></div>
-                <p class="boardroom-loading-text">Connecting to boardroom...</p>
-            </div>
-        </div>
-
-        <!-- Toast notifications -->
-        <div class="boardroom-toast-container" id="boardroom-toasts" aria-live="polite" aria-atomic="true">
-        </div>
-    </main>
-</boardroom-app>
-
-<script type="module" src="{{ '/assets/js/boardroom-app-new.js' | relative_url }}"></script>
+<p>If you are not redirected, <a href="{{ '/boardroom/' | relative_url }}">go to the Boardroom</a>.</p>
