--- a/boardroom/index.html
+++ b/boardroom/index.html
@@ -1,28 +1,126 @@
 ---
 layout: app
 title: "Boardroom | Business Infinity"
+boardroom:
+  api_base: "/api/boardroom"
+  show_avatar: true
+  show_toolbar: true
+  show_typing_indicator: true
+  show_connection_status: true
+  show_toggle_strip: true
+  show_members_sidebar: true
+  show_agent_profiles: true
+  enable_screen_share: true
+  enable_video_call: true
+  enable_file_attach: true
+  enable_formatting: true
+  auto_refresh: true
+  refresh_interval: 3000
 ---
 
-<main class="boardroom-container">
-  <section class="boardroom-section" aria-label="Boardroom Interface">
-    <div class="boardroom-container-fluid">
-      <div class="boardroom-main-row">
-        {% include boardroom/toggle-strip.html %}
-        {% include boardroom/members-sidebar.html %}
-        {% include boardroom/chat-area.html %}
+<boardroom-app
+  title="{{ page.title }}"
+  {% if page.boardroom.show_avatar %}show-avatar{% endif %}
+  {% if page.boardroom.show_toolbar %}show-toolbar{% endif %}
+  {% if page.boardroom.show_typing_indicator %}show-typing-indicator{% endif %}
+  {% if page.boardroom.show_connection_status %}show-connection-status{% endif %}
+  {% if page.boardroom.show_toggle_strip %}show-toggle-strip{% endif %}
+  {% if page.boardroom.show_members_sidebar %}show-members-sidebar{% endif %}
+  {% if page.boardroom.show_agent_profiles %}show-agent-profiles{% endif %}
+  {% if page.boardroom.enable_screen_share %}enable-screen-share{% endif %}
+  {% if page.boardroom.enable_video_call %}enable-video-call{% endif %}
+  {% if page.boardroom.enable_file_attach %}enable-file-attach{% endif %}
+  {% if page.boardroom.enable_formatting %}enable-formatting{% endif %}
+  api-base="{{ page.boardroom.api_base }}"
+  {% if page.boardroom.auto_refresh %}auto-refresh refresh-interval="{{ page.boardroom.refresh_interval }}"{% endif %}
+>
+  <main class="boardroom-container">
+    <section class="boardroom-section" aria-label="Boardroom Interface">
+      <div class="boardroom-container-fluid">
+        <div class="boardroom-main-row">
+          {% include boardroom/toggle-strip.html %}
+          {% include boardroom/members-sidebar.html %}
+
+          <!-- Chat Area (extends chatroom theme partials) -->
+          <section id="chatArea" class="boardroom-chat-area" aria-label="Chat Area">
+            {% include chatroom/header.html
+            title="Boardroom"
+            connection_status='<span class="boardroom-status-indicator boardroom-status-online"></span> Live'
+            extra_actions='
+            <button class="boardroom-action-btn" title="Screen Share" aria-label="Screen Share">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/display.svg"
+                alt="Screen Share" width="18" height="18" />
+            </button>
+            <button class="boardroom-action-btn" title="Video Call" aria-label="Video Call">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/camera-video.svg"
+                alt="Video Call" width="18" height="18" />
+            </button>
+            <button class="boardroom-action-btn" title="More Options" aria-label="More Options">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/three-dots.svg"
+                alt="More Options" width="18" height="18" />
+            </button>
+            '
+            %}
+
+            <section class="chatroom-messages boardroom-chat-messages" id="chatMessages" aria-label="Chat Messages">
+              {% include boardroom/chat-area/empty-state.html %}
+            </section>
+
+            {% include chatroom/input.html
+            show_avatar=true
+            avatar_url="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
+            placeholder="Type your message..."
+            rows=1
+            maxlength=1000
+            show_toolbar=true
+            extra_input_actions='
+            <button class="chatroom-input-action-btn" type="button" title="Attach File" aria-label="Attach File">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/paperclip.svg" alt="Attach" width="18" height="18" />
+            </button>
+            <button class="chatroom-input-action-btn" type="button" title="Insert Emoji" aria-label="Insert Emoji">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/emoji-smile.svg" alt="Emoji" width="18" height="18" />
+            </button>
+            <button class="chatroom-input-action-btn" type="button" title="Voice Message" aria-label="Voice Message">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/mic.svg" alt="Voice" width="18" height="18" />
+            </button>
+            '
+            toolbar_left='
+            <button class="chatroom-input-format-btn" type="button" title="Bold" aria-label="Bold">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/type-bold.svg" alt="Bold" width="14" height="14" />
+            </button>
+            <button class="chatroom-input-format-btn" type="button" title="Italic" aria-label="Italic">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/type-italic.svg" alt="Italic" width="14" height="14" />
+            </button>
+            <button class="chatroom-input-format-btn" type="button" title="Code" aria-label="Code">
+              <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/code.svg" alt="Code" width="14" height="14" />
+            </button>
+            '
+            toolbar_right='
+            <span class="chatroom-char-count" id="char-count">0/1000</span>
+            '
+            %}
+          </section>
+        </div>
+      </div>
+    </section>
+
+    <!-- Loading overlay -->
+    <div class="boardroom-loading-overlay" id="boardroom-loading">
+      <div class="boardroom-loading-content">
+        <div class="boardroom-loading-spinner"></div>
+        <p class="boardroom-loading-text">Connecting to boardroom...</p>
       </div>
     </div>
-  </section>
-  
-  <!-- Loading overlay  -->
-  <div class="boardroom-loading-overlay" id="boardroom-loading">
-    <div class="boardroom-loading-content">
-      <div class="boardroom-loading-spinner"></div>
-      <p class="boardroom-loading-text">Connecting to boardroom...</p>
-    </div>
+
+    <!-- Toast notifications -->
+    <div class="boardroom-toast-container" id="boardroom-toasts" aria-live="polite" aria-atomic="true"></div>
+  </main>
+</boardroom-app>
+
+<noscript>
+  <div class="boardroom-noscript">
+    JavaScript is required for live collaboration. The static view shows members and initial content.
   </div>
-  
-  <!-- Toast notifications -->
-  <div class="boardroom-toast-container" id="boardroom-toasts" aria-live="polite" aria-atomic="true">
-  </div>
-</main>
+</noscript>
+
+<script type="module" src="{{ '/assets/js/boardroom-app-new.js' | relative_url }}"></script>
